--- a/swagger/sanctions_list.v1.yaml
+++ b/swagger/sanctions_list.v1.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: Sanctions List API
   version: '1.0'
-  description: "### Introduction\ncubemos Sanctions list API is a RESTful API which can be used to avoid prosecution and be compliant with international regulation on sanctions, AML and financial crime. \n\n\n\n### Features\n1. Easy integration\n2. Example code for various languages\n3. Strict and fuzzy search \n4. Batch search \n\n### Supported Sanction Lists\n1. EU Financial Sanctions List\n2. UN Sanctions List\n3. Politically Exposed Persons"
+  description: "### Introduction\ncubemos Sanctions list API is a RESTful API which can be used to avoid prosecution and be compliant with international regulation on sanctions, AML and financial crime. \n\n### Features\n1. Easy integration\n2. Sample code for various languages\n3. Strict and fuzzy search \n4. Batch search \n\n### Watch Lists\n1. EU Financial Sanctions List\n2. UN Sanctions List\n3. Politically Exposed Persons"
   contact:
     name: cubemos gmbh
     url: www.cubemos.com
@@ -25,9 +25,9 @@ paths:
           content:
             application/json:
               schema:
-                type: array
                 items:
                   $ref: '#/components/schemas/person'
+                type: array
               examples:
                 example:
                   value:
@@ -42,7 +42,7 @@ paths:
                             - Serhiy Klyuyev
                           nationalities:
                             - UA
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?entityLogicalID=12345'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
                       - person:
                           first_name: Serhii
                           middle_name: ''
@@ -53,7 +53,7 @@ paths:
                             - Serhiy Klyuyev
                           nationalities:
                             - UA
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?entityLogicalID=12345'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
         '400':
           description: Bad Request
         '401':
@@ -123,9 +123,9 @@ paths:
           content:
             application/json:
               schema:
-                type: array
                 items:
                   $ref: '#/components/schemas/organization'
+                type: array
               examples:
                 example:
                   value:
@@ -138,7 +138,7 @@ paths:
                             street: Hermann Straße 1
                           headquarter_country: DE
                           aliases: []
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry/?entityLogicalID=12345'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
                       - organization:
                           address:
                             country: DE
@@ -147,7 +147,7 @@ paths:
                             street: Hermann Straße 1
                           headquarter_country: DE
                           aliases: []
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry/?entityLogicalID=12345'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
           headers: {}
         '400':
           description: Bad Request
@@ -204,7 +204,7 @@ paths:
                             - Serhiy Klyuyev
                           nationalities:
                             - UA
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry/?entityLogicalID=12345'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
                       - person:
                           first_name: Serhii
                           middle_name: ''
@@ -215,7 +215,7 @@ paths:
                             - Serhiy Klyuyev
                           nationalities:
                             - UA
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry/?entityLogicalID=12345'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
                     organizations:
                       - organization:
                           address:
@@ -225,7 +225,7 @@ paths:
                             street: Hermann Straße 1
                           headquarter_country: DE
                           aliases: []
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry/?entityLogicalID=12345'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
                       - organization:
                           address:
                             country: DE
@@ -234,7 +234,7 @@ paths:
                             street: Hermann Straße 1
                           headquarter_country: DE
                           aliases: []
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry/?entityLogicalID=12345'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
         '400':
           description: Bad Request
         '401':
@@ -272,9 +272,9 @@ paths:
           content:
             application/json:
               schema:
+                type: array
                 items:
                   $ref: '#/components/schemas/personBatchSearchResult'
-                type: array
               examples:
                 example:
                   value:
@@ -396,7 +396,7 @@ paths:
                             - Serhiy Klyuyev
                           nationalities:
                             - UA
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry?entityLogicalID=12345'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
                       - person:
                           first_name: Serhii
                           middle_name: ''
@@ -407,7 +407,7 @@ paths:
                             - Serhiy Klyuyev
                           nationalities:
                             - UA
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry?entityLogicalID=12345'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
                     organizations:
                       - organization:
                           address:
@@ -417,7 +417,7 @@ paths:
                             street: Hermann Straße 1
                           headquarter_country: DE
                           aliases: []
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry?entityLogicalID=12345'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
                       - organization:
                           address:
                             country: DE
@@ -426,7 +426,7 @@ paths:
                             street: Hermann Straße 1
                           headquarter_country: DE
                           aliases: []
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry?entityLogicalID=12345'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
       requestBody:
         content:
           application/json:
@@ -455,9 +455,9 @@ paths:
           content:
             application/json:
               schema:
+                type: array
                 items:
                   $ref: '#/components/schemas/organizationBatchSearchResult'
-                type: array
               examples:
                 example:
                   value:
@@ -472,7 +472,7 @@ paths:
                                 street: Hermann Straße 1
                               headquarter_country: DE
                               aliases: []
-                              list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
+                              list_entry_url: 'https://sanctions-api.cubemos.com/sanctions/list/cfsp?=12345'
                           - organization:
                               address:
                                 country: DE
@@ -524,34 +524,7 @@ paths:
           In order to perform a search on multiple organizations through the sanction lists, the name and the desired sanction lists are required. Additionally, a unique index has to be assigned to each organization searched for in order to map the results to it in the output payload. The search returns a list with all the possible matches with a score. Advanced attributes can be provided in order to make the search results stricter.
       tags:
         - Batch Search
-  '/list/sdn/{uid}':
-    get:
-      summary: SDN list entry
-      tags:
-        - Sanction List Entry
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/sdn'
-              examples:
-                example:
-                  value:
-                    publishDate: ''
-                    recordCount: ''
-                    uid: ''
-      operationId: get-list-sdn
-      description: Get the entry from the official sanctions list based on the result from the search calls
-    parameters:
-      - schema:
-          type: string
-        name: uid
-        in: path
-        description: The UID in the SDN sanctions list from which all the entries will be returned
-        required: true
-  '/list/cfsp/{entityLogicalID}':
+  '/list/cfsp/{id}':
     get:
       summary: CFSP list entry
       tags:
@@ -696,10 +669,37 @@ paths:
     parameters:
       - schema:
           type: string
-        name: entityLogicalID
+        name: id
         in: path
         required: true
         description: The entity logical ID in the CFSP sanctions list from which all the entries will be returned
+  '/list/sdn/{id}':
+    get:
+      summary: SDN list entry
+      tags:
+        - Sanction List Entry
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/sdn'
+              examples:
+                example:
+                  value:
+                    publishDate: ''
+                    recordCount: ''
+                    uid: ''
+      operationId: get-list-sdn
+      description: Get the entry from the official sanctions list based on the result from the search calls
+    parameters:
+      - schema:
+          type: string
+        name: id
+        in: path
+        description: The UID in the SDN sanctions list from which all the entries will be returned
+        required: true
 components:
   schemas:
     personSearchAttributes:
@@ -736,10 +736,14 @@ components:
           type: string
           description: Date of birth of the person
           example: 01.01.1950
-        nationality:
-          description: Nationalities of the person as an array of 2 letter ISO country code
-          example: USA
+        city:
           type: string
+          description: The city in which the person was known to reside
+          example: Berlin
+        nationality:
+          type: string
+          example: DE
+          description: The 2 letter ISO code of the nationality of the person
       required:
         - full_name
     searchConfig:
@@ -802,8 +806,7 @@ components:
         address:
           $ref: '#/components/schemas/address'
         headquarter_country:
-          description: |
-            Match similarity for each search result corresponding to the sanction list
+          description: '2 digit ISO country code '
           type: string
         aliases:
           type: array
@@ -813,6 +816,12 @@ components:
         list_entry_url:
           type: string
           description: The URL to the list entry which can be used with the GET call to obtain the raw entries from the sanction list in which the result is extracted from
+      required:
+        - name
+        - address
+        - headquarter_country
+        - aliases
+        - list_entry_url
     geo:
       title: geo
       type: object
@@ -844,6 +853,9 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/organization'
+      required:
+        - persons
+        - organizations
     personBatchSearch:
       title: personBatchSearch
       type: object
@@ -854,19 +866,19 @@ components:
           properties:
             sanction_lists:
               type: array
-              description: The sanction lists through which the entity shall be searched through
               items:
                 type: string
+              description: The sanction lists through which the entity shall be searched through
             indices:
               type: array
-              description: The indices assigned to each person to which the data in the response is mapped
               items:
                 type: string
+              description: The indices assigned to each person to which the data in the response is mapped
             must_match_attributes:
               type: array
-              description: The attributes which will be enforced as a strict filter
               items:
                 type: string
+              description: The attributes which will be enforced as a strict filter
         persons:
           type: array
           items:
@@ -876,12 +888,12 @@ components:
       type: object
       description: Response payload of the batch search on persons
       properties:
+        index:
+          type: integer
         person:
           type: array
           items:
             $ref: '#/components/schemas/person'
-        index:
-          type: integer
     addressSearch:
       title: addressSearch
       type: object
@@ -928,6 +940,16 @@ components:
         list_entry_url:
           type: string
           description: The URL to the list entry which can be used with the GET call to obtain the raw entries from the sanction list in which the result is extracted from
+      required:
+        - first_name
+        - middle_name
+        - last_name
+        - dob
+        - gender
+        - aliases
+        - nationalities
+        - list_entry_url
+      x-examples: {}
     address:
       title: address
       type: object
@@ -986,13 +1008,40 @@ components:
       type: object
       description: response payload of batch search on organisations
       properties:
+        index:
+          description: Unique index corresponding to each person searched for and for which the results could be found
+          type: integer
         organizations:
           type: array
           items:
             $ref: '#/components/schemas/organization'
-        index:
-          description: Unique index corresponding to each person searched for and for which the results could be found
-          type: integer
+    sdn:
+      title: sdn
+      type: object
+      x-tags:
+        - Sanction List Payloads
+      properties:
+        publishDate:
+          type: string
+        recordCount:
+          type: string
+        uid:
+          type: string
+        firstName:
+          type: string
+        lastName:
+          type: string
+        sdnType:
+          type: string
+        program:
+          type: string
+        aka:
+          type: string
+        dateOfBirth:
+          type: string
+        placeOfBirth:
+          type: string
+      x-examples: {}
     cfsp:
       title: cfsp
       type: object
@@ -1237,31 +1286,4 @@ components:
       x-tags:
         - Sanction List Payloads
       description: ''
-    sdn:
-      title: sdn
-      type: object
-      properties:
-        placeOfBirth:
-          type: string
-        dateOfBirth:
-          type: string
-        aka:
-          type: string
-        program:
-          type: string
-        sdnType:
-          type: string
-        lastName:
-          type: string
-        firstName:
-          type: string
-        uid:
-          type: string
-        recordCount:
-          type: string
-        publishDate:
-          type: string
-      x-examples: {}
-      x-tags:
-        - Sanction List Payloads
   securitySchemes: {}
