removed unnecessary stuffs from yaml for v1

--- a/swagger/sanctions_list.v1.yaml
+++ b/swagger/sanctions_list.v1.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: Sanctions List API
   version: '1.0'
-  description: "### Introduction\ncubemos Sanctions list API is a RESTful API which can be used to avoid prosecution and be compliant with international regulation on sanctions, AML and financial crime. \n\n### Features\n1. Easy integration\n2. Sample code for various languages\n3. Strict and fuzzy search \n4. Batch search \n\n### Watch Lists\n1. EU Financial Sanctions List\n2. UN Sanctions List\n3. Politically Exposed Persons"
+  description: 'cubemos Sanctions list API is a RESTful API which can be used to avoid prosecution and be compliant with international regulation on sanctions, AML and financial crime. '
   contact:
     name: cubemos gmbh
     url: www.cubemos.com
@@ -262,268 +262,6 @@ paths:
       tags:
         - Entity Search
     parameters: []
-  /batchsearch/entities/person:
-    post:
-      summary: batch person search
-      operationId: post-bulksearch-entities-person
-      responses:
-        '200':
-          description: 'The request was created successfully and the results are available as an array. If the array is empty, there were no matching persons found in the desired sanction lists.'
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/personBatchSearchResult'
-              examples:
-                example:
-                  value:
-                    personsBatch:
-                      - index: 1
-                        persons:
-                          - person:
-                              first_name: Serhii
-                              middle_name: ''
-                              last_name: Kliuiev
-                              dob: 19.08.1969
-                              gender: male
-                              alias:
-                                - Serhiy Klyuyev
-                              nationalities:
-                                - UA
-                              list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
-                          - person:
-                              first_name: Serhii
-                              middle_name: ''
-                              last_name: Kliuiev
-                              dob: 19.08.1969
-                              gender: male
-                              alias:
-                                - Serhiy Klyuyev
-                              nationalities:
-                                - UA
-                              list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
-                      - index: 2
-                        persons:
-                          - person:
-                              first_name: Serhii
-                              middle_name: ''
-                              last_name: Kliuiev
-                              dob: 19.08.1969
-                              gender: male
-                              alias:
-                                - Serhiy Klyuyev
-                              nationalities:
-                                - UA
-                              list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
-      description: "### Searches for multiple persons at a time through the sanction lists\nThis API call allows you to perform a batch search for multiple persons through the desired sanction lists. The search results returned are a list of list of all entries from the sanction lists which match to the input along with the degree of the match. "
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/personBatchSearch'
-            examples:
-              Example:
-                value:
-                  person_batch_search:
-                    search_config:
-                      sanction_lists:
-                        - cfsp
-                        - sdn
-                      indices:
-                        - ID2
-                        - ID3
-                        - ID4
-                        - ID332
-                        - ID333
-                        - ID334
-                      must_match_attributes:
-                        - last_name
-                        - nationality
-                    persons:
-                      - first_name: Serhii
-                        middle_name: ''
-                        last_name: Kliuiev
-                        full_name: Serhii Kliuiev
-                        alias: Serhiy Klyuyev
-                        gender: male
-                        nationality: UA
-                        dob: 19.08.1969
-                      - first_name: Marie
-                        middle_name: Lynn
-                        last_name: Franklin
-                        full_name: Marie Lynn Franklin
-                        alias: Marilynn Franklin
-                        gender: female
-                        nationality: US
-                        dob: 12.03.1984
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/personBatchSearch'
-          multipart/form-data:
-            schema:
-              type: object
-              properties: {}
-        description: |-
-          ### Payload request schema for single search
-          In order to perform a search on a batch of persons through the sanction lists, the full name and the desired sanction lists are required. Additionally, a unique index has to be allocated to each person to which the results would be mapped as well. The search returns a list with all the possible matches with a score of the match. Advanced attributes can be provided in order to make the search results stricter.
-      parameters: []
-      tags:
-        - Batch Search
-    parameters: []
-  /search/location/geo:
-    post:
-      summary: geo search
-      operationId: post-search-geo
-      responses:
-        '200':
-          description: 'The request was created successfully and the results are available as an array. If the array is empty, there were no matching entities were found in the desired sanction lists.'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/locationSearchResult'
-              examples:
-                example:
-                  value:
-                    persons:
-                      - person:
-                          first_name: Serhii
-                          middle_name: ''
-                          last_name: Kliuiev
-                          dob: 19.08.1969
-                          gender: male
-                          alias:
-                            - Serhiy Klyuyev
-                          nationalities:
-                            - UA
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
-                      - person:
-                          first_name: Serhii
-                          middle_name: ''
-                          last_name: Kliuiev
-                          dob: 19.08.1969
-                          gender: male
-                          alias:
-                            - Serhiy Klyuyev
-                          nationalities:
-                            - UA
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
-                    organizations:
-                      - organization:
-                          address:
-                            country: DE
-                            zip_code: 12345
-                            city: Berlin
-                            street: Hermann Straße 1
-                          headquarter_country: DE
-                          aliases: []
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
-                      - organization:
-                          address:
-                            country: DE
-                            zip_code: 87654
-                            city: Munich
-                            street: Hermann Straße 1
-                          headquarter_country: DE
-                          aliases: []
-                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?id=12345'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/geoSearch'
-            examples:
-              Example:
-                value:
-                  sanction_lists:
-                    - EU-financial sanctions list
-                    - UN-sanctions list
-                  geo:
-                    latitude: 0.1234
-                    logitude: 0.1234
-                    radius: 500
-        description: "### Payload request scheme for single search\nIn order to search for a location bassed on the geographical co-ordinates, the sanction lists as well as precise co-ordinates are required. The resulting payload consists of all the entities found at the address with their respective match scores. Please note that the higher the search radius, the bigger could be the output response payload.  "
-      description: "### Search on an entity through the desired sanction lists in a radius around a geographical co-ordinate\nThis API call allows you to perform a search through the desired sanction lists for any entity at the desired location. The search results returned are a list of all entries from the sanction lists which match to the input along with the degree of the match. "
-      parameters: []
-  /batchsearch/entities/organization:
-    post:
-      summary: batch organization search
-      operationId: post-batchsearch-entities-organization
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/organizationBatchSearchResult'
-              examples:
-                example:
-                  value:
-                    organizationsBatch:
-                      - index: 1
-                        organization:
-                          - organization:
-                              address:
-                                country: DE
-                                zip_code: 12345
-                                city: Berlin
-                                street: Hermann Straße 1
-                              headquarter_country: DE
-                              aliases: []
-                              list_entry_url: 'https://sanctions-api.cubemos.com/sanctions/list/cfsp?=12345'
-                          - organization:
-                              address:
-                                country: DE
-                                zip_code: 87654
-                                city: Munich
-                                street: Hermann Straße 1
-                              headquarter_country: DE
-                              aliases: []
-                              list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
-                      - index: 2
-                        organization:
-                          - organization:
-                              address:
-                                country: DE
-                                zip_code: 12345
-                                city: Berlin
-                                street: Hermann Straße 1
-                              headquarter_country: DE
-                              aliases: []
-                              list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
-      description: "### Searches for multiple organizations at a time through the sanction lists\nThis API call allows you to perform a batch search for multiple organizations through the desired sanction lists. The search results returned are a list of list of all entries from the sanction lists which match to the input along with the degree of the match. "
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/organizationBatchSearch'
-            examples:
-              Example:
-                value:
-                  organization_batch_search:
-                    search_config:
-                      sanction_lists:
-                        - cfsp
-                        - sdn
-                      indices:
-                        - ID2
-                        - ID3
-                        - ID4
-                        - ID332
-                        - ID333
-                        - ID334
-                    organizations:
-                      - name: cubemos gmbh
-                        country_code: DE
-                      - name: framos gmbh
-                        country_code: DE
-        description: |-
-          ### Payload request schema for batch search
-          In order to perform a search on multiple organizations through the sanction lists, the name and the desired sanction lists are required. Additionally, a unique index has to be assigned to each organization searched for in order to map the results to it in the output payload. The search returns a list with all the possible matches with a score. Advanced attributes can be provided in order to make the search results stricter.
-      tags:
-        - Batch Search
   '/list/cfsp/{id}':
     get:
       summary: CFSP list entry
@@ -822,24 +560,6 @@ components:
         - headquarter_country
         - aliases
         - list_entry_url
-    geo:
-      title: geo
-      type: object
-      description: Basic search identifiers for an entity through a sanction list based on geographical co-ordinates
-      properties:
-        latitude:
-          type: number
-          description: The latitude of the location
-        logitude:
-          type: number
-          description: The longitude of the location
-        radius:
-          type: integer
-          description: Search radius around the input latitude and logitude in meters
-      required:
-        - latitude
-        - logitude
-        - radius
     locationSearchResult:
       title: locationSearchResult
       type: object
@@ -856,44 +576,6 @@ components:
       required:
         - persons
         - organizations
-    personBatchSearch:
-      title: personBatchSearch
-      type: object
-      description: Batch search payload for persons
-      properties:
-        search_config:
-          type: object
-          properties:
-            sanction_lists:
-              type: array
-              items:
-                type: string
-              description: The sanction lists through which the entity shall be searched through
-            indices:
-              type: array
-              items:
-                type: string
-              description: The indices assigned to each person to which the data in the response is mapped
-            must_match_attributes:
-              type: array
-              items:
-                type: string
-              description: The attributes which will be enforced as a strict filter
-        persons:
-          type: array
-          items:
-            $ref: '#/components/schemas/personSearchAttributes'
-    personBatchSearchResult:
-      title: personBatchSearchResult
-      type: object
-      description: Response payload of the batch search on persons
-      properties:
-        index:
-          type: integer
-        person:
-          type: array
-          items:
-            $ref: '#/components/schemas/person'
     addressSearch:
       title: addressSearch
       type: object
@@ -967,54 +649,6 @@ components:
         street:
           type: string
           description: Name of the street
-    geoSearch:
-      title: geoSearch
-      type: object
-      description: query payload for an geo search
-      properties:
-        search_config:
-          $ref: '#/components/schemas/searchConfig'
-        geo:
-          $ref: '#/components/schemas/geo'
-      required:
-        - search_config
-        - geo
-    organizationBatchSearch:
-      title: organizationBatchSearch
-      type: object
-      description: query payload for batch search on organizations
-      properties:
-        search_config:
-          type: object
-          properties:
-            sanction_lists:
-              type: array
-              items:
-                type: string
-            indices:
-              type: array
-              items:
-                type: integer
-            must_match_attributes:
-              type: array
-              items:
-                type: string
-        organizations:
-          type: array
-          items:
-            $ref: '#/components/schemas/organizationSearchAttributes'
-    organizationBatchSearchResult:
-      title: organizationBulkSearchResult
-      type: object
-      description: response payload of batch search on organisations
-      properties:
-        index:
-          description: Unique index corresponding to each person searched for and for which the results could be found
-          type: integer
-        organizations:
-          type: array
-          items:
-            $ref: '#/components/schemas/organization'
     sdn:
       title: sdn
       type: object
