--- a/swagger/sanctions_list.v1.yaml
+++ b/swagger/sanctions_list.v1.yaml
@@ -1,9 +1,4 @@
 openapi: 3.0.0
-tags:
-  - name: Sanction List Entry
-    description: 'Full reference information in an official sanction list'
-  - name: Entity Search
-    description: 'Perform a search for a single entity'
 info:
   title: Sanctions List API
   version: '1.0'
@@ -110,9 +105,7 @@ paths:
             schema:
               type: object
               properties: {}
-        description: |-
-          ### Payload request schema for single search
-          In order to perform a search on a person through the sanction lists, the full name and the desired sanction lists are required. This would return a list with all the possible matches with a score of the match. Advanced attributes can be provided in order to make the search results stricter.
+        description: "### Payload request schema for single search\nIn order to perform a search on a person through the sanction lists, the full name and the desired watch lists are required. Please note that the higher the ambiguity in input, the bigger could be the output response payload.  "
       parameters: []
       tags:
         - Entity Search
@@ -176,10 +169,8 @@ paths:
                     organization:
                       name: cubemos gmbh
                       country_code: DE
-        description: |-
-          ### Payload request schema for single search
-          In order to perform a search on an organization through the sanction lists, the name and the desired sanction lists are required. This would return a list with all the possible matches with a score of the match. Advanced attributes can be provided in order to make the search results stricter.
-      description: "### Search an organization through sanction lists\nThis API call allows you to perform a search through the desired sanction lists for an organization. The search results returned are a list of all entries from the sanction lists which match to the input along with the degree of the match. "
+        description: "### Payload request schema for single search\nIn order to perform a search on an organization through the watch lists, the name and the desired watch lists are required. Please note that the higher the ambiguity in input, the bigger could be the output response payload.  "
+      description: "### Search an organization through watch lists\nThis API call allows you to perform a search through the desired sanction lists for an organization. The search results returned are a list of all entries from the watch lists which match to the input along with the degree of the match. "
       tags:
         - Entity Search
     parameters: []
@@ -261,8 +252,8 @@ paths:
                     zip_code: 12345
                     city: Berlin
                     street: Hermann Straße 1
-        description: "### Payload request scheme for single search\nIn order to search for a location bassed on the address, the sanction lists as well as the address details are required. Additional address lines can be placed into the advanced search attributes. The resulting payload consists of all the entities found at the address with their respective match scores. Please note that the higher the ambiguity in input, the bigger could be the output response payload.  "
-      description: "### Search on an entity through the desired sanction lists in at an address\nThis API call allows you to perform a search through the desired sanction lists for any entity at the desired location. The search results returned are a list of all entries from the sanction lists which match to the input along with the degree of the match. "
+        description: "### Payload request scheme for single search\nIn order to search for a location bassed on the address, the watch lists as well as the address details are required. Please note that the higher the ambiguity in input, the bigger could be the output response payload.  "
+      description: "### Search on an entity through the desired watch lists in at an address\nThis API call allows you to perform a search through the desired watch lists for all the watched entities at the desired location. "
       tags:
         - Entity Search
     parameters: []
@@ -445,9 +436,9 @@ paths:
 components:
   schemas:
     personSearchAttributes:
-      title: personBasicSearch
+      title: personSearchAttributes
       type: object
-      description: Basic search identifiers for a person through a sanction list
+      description: Search identifiers for a person through the watch list
       x-examples: {}
       properties:
         full_name:
@@ -456,27 +447,29 @@ components:
           example: john junior senior smith
         first_name:
           type: string
-          description: All the first names of the person
+          description: All the known first names of the person
           example: john
         middle_name:
           type: string
-          description: All the middle names of the person
+          description: All the known middle names of the person
           example: junior senior
         last_name:
           type: string
-          description: All the last names of the person
+          description: All the known last names of the person
           example: smith
-        alias:
-          description: 'All the aliases of the person as an array '
+        aliases:
+          description: 'All the known aliases of the person as an array '
           example: 'don john, godfather'
-          type: string
+          type: array
+          items:
+            type: string
         gender:
           type: string
           description: 'Gender of the person '
           example: male
         dob:
           type: string
-          description: Date of birth of the person
+          description: The date of birth of the person known
           example: 01.01.1950
         city:
           type: string
@@ -485,30 +478,30 @@ components:
         nationality:
           type: string
           example: DE
-          description: The 2 letter ISO code of the nationality of the person
+          description: The 2 letter ISO code of the nationality of the person known
       required:
         - full_name
     searchConfig:
-      title: personAdvancedSearch
+      title: search config
       type: object
-      description: Advanced search for a person through a sanction list
+      description: configure the search on the desired entity
       properties:
         watch_lists:
           type: array
-          description: All the sanction lists as an array through which the search has to be made
+          description: All the watch list names through which the search has to be made
           items:
             type: string
         must_match_attributes:
           type: array
-          description: |-
-            Identifiers of the entry fields against which the match similarity has to be 100% in the results
-            The identifiers can be from the basic fields and advanced fields
+          description: 'Identifiers of the entry fields against which the output field has to be a 100% match'
           items:
             type: string
+      required:
+        - watch_lists
     personSearch:
       title: personSearch
       type: object
-      description: The identifiers based on which the search will be performed for a person through the desired sanction lists
+      description: The identifiers based on which the search will be performed for a person through the desired watch lists
       x-examples: {}
       properties:
         search_config:
@@ -516,22 +509,22 @@ components:
         person:
           $ref: '#/components/schemas/personSearchAttributes'
     organizationSearchAttributes:
-      title: organizationAdvancedSearch
+      title: organizationSearchAttributes
       type: object
-      description: Advanced search for an organization through a sanction list
+      description: Search for an organization through a watch list
       properties:
         name:
           type: string
-          description: ISO country code of the place where the headquarters of the organization is located
+          description: Name of the organization
           example: cubemos gmbh
         country_code:
           type: string
-          description: 'ISO country code '
+          description: 2 digit ISO country code of the place where the organization is located
           example: DE
     organizationSearch:
       title: organizationSearch
       type: object
-      description: The identifiers based on which the search will be performed for a organization through the desired sanction lists
+      description: The identifiers based on which the search will be performed for a organization through the desired watch lists
       properties:
         search_config:
           $ref: '#/components/schemas/searchConfig'
@@ -544,15 +537,15 @@ components:
       properties:
         name:
           type: string
-          description: Sanction lists in which the results were found
+          description: Name of the organization
         address:
           $ref: '#/components/schemas/address'
         headquarter_country:
-          description: '2 digit ISO country code '
+          description: "2 digit ISO country code of the organization's headquarter"
           type: string
         aliases:
           type: array
-          description: "List of aliases that the organization has for it's name. "
+          description: "List of all the aliases that the organization has for it's name"
           items:
             type: string
         list_entry_url:
@@ -567,7 +560,7 @@ components:
     locationSearchResult:
       title: locationSearchResult
       type: object
-      description: Response of a search query based on geographical co-ordinates through the desired sanction lists
+      description: Response of a search query based on address through the desired watch lists
       properties:
         persons:
           type: array
@@ -597,35 +590,36 @@ components:
       title: person
       type: object
       description: person details
+      x-examples: {}
       properties:
         first_name:
           type: string
-          description: First name of the query
+          description: First name of the queried person
         middle_name:
           type: string
-          description: Middle name of the query
+          description: Middle name of the queried person
         last_name:
           type: string
-          description: Last name of the query
+          description: Last name of the queried person
         dob:
           type: string
-          description: Date of birth of the person
+          description: Date of birth of the queried person
         gender:
           type: string
-          description: Gender of the person
+          description: Gender of the queried person
         aliases:
           type: array
-          description: List of all the aliases that the person has
+          description: List of all the aliases that the queried person has
           items:
             type: string
         nationalities:
           type: array
-          description: Nationalities of a person denoted as by their respective ISO country codes
+          description: Nationalities of a person denoted as by their respective 2 digit ISO country codes
           items:
             type: string
         list_entry_url:
           type: string
-          description: The URL to the list entry which can be used with the GET call to obtain the raw entries from the sanction list in which the result is extracted from
+          description: The URL to the list entry which can be used with the GET call to obtain the raw entries from the watch list in which the result is extracted from
       required:
         - first_name
         - middle_name
@@ -635,11 +629,10 @@ components:
         - aliases
         - nationalities
         - list_entry_url
-      x-examples: {}
     address:
       title: address
       type: object
-      description: Basic search identifiers for an entity through a sanction list based on an address
+      description: Basic search identifiers for the address to search through a watch list where a watched entity might be present
       properties:
         country_code:
           type: string
@@ -923,5 +916,10 @@ components:
           type: string
       x-tags:
         - Sanction List Payloads
-      description: ''
+      description: Output payload of the entry from the CFSP watch list
   securitySchemes: {}
+tags:
+  - name: Sanction List Entry
+    description: Full reference information in an official sanction list
+  - name: Entity Search
+    description: Perform a search for a single entity
