--- a/swagger/sanctions_list.v1.yaml
+++ b/swagger/sanctions_list.v1.yaml
@@ -109,6 +109,8 @@ paths:
       parameters: []
       tags:
         - Entity Search
+      security:
+        - API Key: []
     parameters: []
   /search/entities/organization:
     post:
@@ -173,6 +175,8 @@ paths:
       description: "### Search an organization through watch lists\nThis API call allows you to perform a search through the desired sanction lists for an organization. The search results returned are a list of all entries from the watch lists which match to the input along with the degree of the match. "
       tags:
         - Entity Search
+      security:
+        - API Key: []
     parameters: []
   /search/location/address:
     post:
@@ -256,6 +260,8 @@ paths:
       description: "### Search on an entity through the desired watch lists in at an address\nThis API call allows you to perform a search through the desired watch lists for all the watched entities at the desired location. "
       tags:
         - Entity Search
+      security:
+        - API Key: []
     parameters: []
   '/list/cfsp/{id}':
     get:
@@ -399,6 +405,8 @@ paths:
       operationId: get-search-sanctions-list-entry
       description: 'Get the entry from the official [CFSP watch list](https://eeas.europa.eu/headquarters/headquarters-homepage_en/8442/Consolidated%20list%20of%20sanctions) based on the result from the search calls. '
       parameters: []
+      security:
+        - API Key: []
     parameters:
       - schema:
           type: string
@@ -426,6 +434,8 @@ paths:
                     uid: ''
       operationId: get-list-sdn
       description: 'Get the entry from the official [SDN watch lists](https://www.treasury.gov/resource-center/sanctions/sdn-list/pages/default.aspx) based on the result from the search calls'
+      security:
+        - API Key: []
     parameters:
       - schema:
           type: string
@@ -917,7 +927,11 @@ components:
       x-tags:
         - Sanction List Payloads
       description: Output payload of the entry from the CFSP watch list
-  securitySchemes: {}
+  securitySchemes:
+    API Key:
+      name: x-api-key
+      type: apiKey
+      in: header
 tags:
   - name: Sanction List Entry
     description: Full reference information in an official sanction list
